New signUp function created
